@@ -1,4 +1,5 @@
 0.1-77
+- add oce.split.screen(), oce.screen(), oce.erase.screen(), oce.close.screen()
 - add oce.colors.two(), oce.colors.jet(), and oce.colors.palette()
 - rename gebco.colors() as oce.colors.gebco()
 - add byte2binary()
